--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,7 +20,7 @@
 .wrapperHome {
   max-width: 335px;
   margin: 0 auto;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   padding: 0 20px;
 }
 
@@ -28,7 +28,7 @@
   .wrapperHome {
     max-width: 704px;
     margin-top: 32px;
-    padding: 0px;
+    /* padding: 0px; */
     /* padding: 0 32px; */
   }
 }
