--- a/src/components/MyNotices/MyNotices.module.css
+++ b/src/components/MyNotices/MyNotices.module.css
@@ -28,14 +28,15 @@
 .navLink {
   display: flex;
   justify-content: center;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.28571;
+  align-items: center;
   border-radius: 30px;
-  letter-spacing: -0.03em;
-  padding: 12px;
+  padding: 15px 20px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
   min-width: 99px;
-  transition: background-color 300ms ease-in-out;
+  border: none;
+  transition: color 0.3s ease, background-color 0.3s ease;
 }
 .navLinkFavorite {
   color: var(--white-color);
