--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 body {
   /* width: 100%; */
   /* height: 100vh; */
-  min-width: 320px;
+  /* min-width: 320px; */
   margin: 0 auto;
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
