--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,11 +1,11 @@
 .container {
-  max-width: 335px;
-  margin: 26px 0 80px;
+  /* mix-width: 280px; */
+  /* margin: 26px 0 80px; */
   padding: 0 20px;
 }
 @media screen and (min-width: 768px) {
   .container {
-    margin-top: 32px;
+    /* margin-top: 32px; */
     padding: 0 32px;
   }
 }
