added style  view

--- a/src/components/LogoChange/LogoChange.module.css
+++ b/src/components/LogoChange/LogoChange.module.css
@@ -62,6 +62,7 @@
 .logo {
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: transparent;
 }
 .logoContainer {
@@ -69,25 +70,23 @@
   align-items: center;
 }
 
-.pawLink {
-  margin-left: 10px;
-}
 .petAvatar {
   display: flex;
+  margin-left: 10px;
   align-self: center;
   justify-content: center;
   align-items: center;
-
-  width: 68px;
-  height: 68px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
   background-color: var(--main-light);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (min-width: 768px) {
   .petAvatar {
-    width: 86px;
-    height: 86px;
+    width: 36px;
+    height: 36px;
   }
 }
 .iconPetDefault {
