--- a/src/components/AddPetForm/AddPetForm.module.css
+++ b/src/components/AddPetForm/AddPetForm.module.css
@@ -98,6 +98,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
@@ -142,10 +143,10 @@
   align-self: center;
   justify-content: center;
   align-items: center;
-
   width: 68px;
   height: 68px;
   border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: var(--main-light);
 }
 
@@ -180,6 +181,7 @@
   font-weight: 500;
   cursor: pointer;
   border: none;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease;
 }
 .uploadButton:hover {
