--- a/src/components/ContainerPage/ContainerPage.module.css
+++ b/src/components/ContainerPage/ContainerPage.module.css
@@ -13,7 +13,11 @@
 
 @media screen and (min-width: 1280px) {
   .container {
-    max-width: 1153px;
-    /* padding: 0 63px 0 64px; */
+    max-width: 1180px;
   }
 }
+/* @media screen and (min-width: 1024px) and (max-width: 1280px) {
+  container {
+    max-width: 1280px;
+  }
+} */
