--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,8 +19,9 @@
 } */
 .wrapperHome {
   max-width: 335px;
+  /* min-width: 280px; */
   margin: 0 auto;
-  /* margin-top: 20px; */
+  margin-top: 20px;
   padding: 0 20px;
 }
 
@@ -29,13 +30,14 @@
     max-width: 704px;
     margin-top: 32px;
     /* padding: 0px; */
-    /* padding: 0 32px; */
+    padding: 0 20px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .wrapperHome {
-    max-width: 1153px;
+    max-width: 1180px;
+    margin-top: 0px;
     /* padding: 0 63px 0 64px; */
   }
 }
@@ -43,12 +45,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 28px 20px 20px;
-  width: 100%;
+  padding: 20px 20px 20px;
+  min-width: 280px;
+  /* width: 100%; */
   margin: 0 auto;
 }
 
 .homeHeader {
+  margin-top: 20px;
+  /* margin: 0 auto; */
+  /* min-width: 280px; */
   background-color: var(--main-color);
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -69,7 +75,7 @@
     padding: 32px 64px;
   }
   .homeHeader {
-    /* padding: 32px 64px 26px 32px; */
-    max-width: 1216px;
+    padding: 32px 64px 26px 32px;
+    max-width: 1280px;
   }
 }
