--- a/src/components/MyNotices/Viewed/Viewed.module.css
+++ b/src/components/MyNotices/Viewed/Viewed.module.css
@@ -3,11 +3,11 @@
 }
 .noticesContainerEmpty {
   padding: 80px 0 0;
-  background-color: #f8d7da;
+  background-color: var(--main-light);
 }
 @media screen and (min-width: 768px) {
   .noticesContainer {
-    padding: 20px 0 0;
+    padding: 20px 20px 0 20px;
   }
 }
 
