--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -40,12 +40,12 @@
     row-gap: 40px;
   }
 }
-/* style favorite */
+/* style favorite_______________ */
 .profileList {
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* styles viewed */
+/* styles viewed__________ */
 .viewedList {
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
