--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -34,3 +34,44 @@
     display: block;
   }
 }
+.logoutButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  padding: 15px 20px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  width: 100%;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+@media screen and (min-width: 768px) {
+  .logoutButton {
+    font-size: 16px;
+  }
+}
+
+.logoutButtonHome {
+  background-color: var(--main-light);
+  color: var(--main-color);
+  border: none;
+}
+
+.logoutButton:hover,
+.logoutButton:focus {
+  background-color: var(--dark-hover);
+  border-color: var(--white-color);
+}
+
+.logoutButtonDefault {
+  background-color: var(--main-color);
+  color: var(--white-color);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.logoutButtonDefault:hover,
+.logoutButtonDefault:focus {
+  background-color: var(--hover-light);
+}
