--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -30,7 +30,7 @@
   color: var(--white-color);
   border: 1px solid #dad4d4;
 }
-/*  color for menu mobile */
+/*_______  color for mobile menu */
 .loginButton:hover,
 .loginButton:focus {
   background-color: var(--dark-hover);
