--- a/src/components/ContainerAdd/ContainerAdd.module.css
+++ b/src/components/ContainerAdd/ContainerAdd.module.css
@@ -25,7 +25,7 @@
 
 @media (min-width: 1280px) {
   .petContainer {
-    max-width: 592px;
+    width: 592px;
     height: auto;
     background-image: url('../src/assets/imgs/desktop/rectangle-desk@1x.png');
   }
@@ -43,7 +43,11 @@
 
 @media screen and (min-width: 1280px) {
   .petImageAdd {
-    height: 664px;
-    /* max-width: 592px; */
+    height: 620px;
+    width: auto;
+    display: block;
+    margin: 0 auto;
+    object-fit: cover;
+    object-position: center;
   }
 }
