--- a/src/components/ContainerPage/ContainerPage.module.css
+++ b/src/components/ContainerPage/ContainerPage.module.css
@@ -7,17 +7,12 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 704px;
-    /* padding: 0 32px; */
+    padding: 0 32px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
-    max-width: 1180px;
-  }
-}
-/* @media screen and (min-width: 1024px) and (max-width: 1280px) {
-  container {
     max-width: 1280px;
   }
-} */
+}
