--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -45,10 +45,6 @@
   border-color: var(--color-white);
 }
 
-/* .otherNav .menuItem {
-  color: var(--color-black);
-} */
-
 .otherNav .menuItem:hover,
 .otherNav .menuItem:focus,
 .otherNav .menuItem:active {
@@ -91,29 +87,24 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  /* height: 100%; */
 }
-/* .icons {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-} */
+
 .iconsWrap {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 .whiteIcon .burgerIcon {
-  content: url('../../assets/icons/whiteBurger.svg');
+  content: url('../src/assets/icons/whiteBurger.svg');
 }
 
 .blackIcon .burgerIcon {
-  content: url('../../assets/icons/blackBurger.svg');
+  content: url('../src/assets/icons/blackBurger.svg');
 }
 
 .circle {
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   border: 2px solid var(--main-light);
   padding: 10px;
   border-radius: 50%;
@@ -123,10 +114,20 @@
 }
 
 .userIcon {
-  width: 24px;
-  height: 24px;
+  width: 15px;
+  height: 15px;
 }
 
 .authButtons {
   width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .circle {
+    width: 40px;
+    height: 40px;
+  }
+  .userIcon {
+    width: 24px;
+    height: 24px;
+  }
 }
