--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 280px;
+  /* padding: 20px 10px; */
   padding: 20px 40px;
   border-radius: 16px;
   background-color: var(--white-color);
@@ -11,9 +13,15 @@
 }
 @media screen and (min-width: 768px) {
   .item {
+    width: 342px;
     padding: 26px;
   }
 }
+/* @media screen and (min-width: 1280px) {
+  .item {
+    max-width: 363px;
+  }
+} */
 .item:hover {
   transform: translateY(-10px);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
@@ -77,14 +85,19 @@
 .info {
   color: rgb(38, 38, 38, 0.5);
 }
-
 .comment {
+  max-width: 220px;
   overflow: hidden;
-  font-size: 14px;
-  font-weight: 500;
-  display: flex;
-  align-self: flex-start;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
+
+.expanded {
+  white-space: normal;
+  overflow: visible;
+}
+
 .icon {
   width: 18px;
   height: 18px;
@@ -93,7 +106,7 @@
 .priceContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 35px;
+  margin-top: 10px;
   align-items: center;
   width: 100%;
 }
