--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -14,7 +14,6 @@
   .circle {
     width: 50px;
     height: 50px;
-    margin-left: 8px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -29,9 +28,18 @@
   gap: 10px;
 }
 .userName {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.2;
-  color: var(--black-color);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .userName {
+    display: block;
+    font-size: 14px;
+    line-height: 1.2;
+    max-width: 50px;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: var(--black-color);
+  }
 }
