--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,5 +1,6 @@
 .userCardWrapper {
-  padding: 18px 20px 40px;
+  min-width: 280px;
+  padding: 20px 20px 40px 20px;
   border-radius: 30px;
   background-color: var(--text-color);
   background-color: var(--white-color);
@@ -9,6 +10,7 @@
 @media screen and (min-width: 768px) {
   .userCardWrapper {
     position: relative;
+    /* width: 620px; */
     padding: 40px;
     border-radius: 60px;
   }
@@ -17,6 +19,7 @@
 @media screen and (min-width: 1280px) {
   .userCardWrapper {
     max-height: 750px;
+    max-width: 750px;
   }
 }
 
