--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -1,8 +1,7 @@
 .authNav {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  /* justify-content: space-between; */
+  justify-content: center;
   padding: 15px 20px;
   border-radius: 30px;
   font-size: 14px;
@@ -57,7 +56,7 @@
 .logoutButtonHome {
   background-color: var(--main-light);
   color: var(--main-color);
-  border: none;
+  border: 1px solid #dad4d4;
 }
 
 .logoutButton:hover,
@@ -69,7 +68,7 @@
 .logoutButtonDefault {
   background-color: var(--main-color);
   color: var(--white-color);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid #dad4d4;
 }
 .logoutButtonDefault:hover,
 .logoutButtonDefault:focus {
