--- a/src/pages/AddPetPage/AddPetPage.module.css
+++ b/src/pages/AddPetPage/AddPetPage.module.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 20px;
+
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
@@ -14,7 +12,6 @@
 }
 @media screen and (min-width: 1280px) {
   .pageAdd {
-    max-width: 1216px;
     flex-direction: row;
   }
 }
@@ -38,8 +35,8 @@
 }
 @media screen and (min-width: 1280px) {
   .containerAdd {
-    max-width: 592px;
-    /* height: 654px; */
-    padding: 40px 80px;
+    width: 592px;
+    min-height: 620px;
+    padding: 20px 80px;
   }
 }
