--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,26 +1,3 @@
-/* .wrapper {
-  display: flex;
-  margin: 0 auto;
-  flex-direction: column;
-} */
-/* padding: 0 0px 10px 0px; */
-/* @media screen and (min-width: 768px) {
-  .wrapper {
-    padding: 0 0px 10px 20px;
-  }
-} */
-/* @media screen and (min-width: 1280px) {
-  .wrapper {
-    max-height: 686px;
-  }
-} */
-/* padding: 160px 80px 160px 80px; */
-/* .container {
-  max-width: 1280px; 
-  margin: 0 auto;
-  padding: 0 20px; 
-} */
-
 .home {
   display: flex;
   line-height: 0.6;
@@ -32,10 +9,8 @@
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   background-color: var(--main-color);
-  /* margin: 0px 20px; */
 }
-/* min-height: 280px; */
-/* min-width: 280px; */
+
 .content {
   display: flex;
   flex-direction: column;
@@ -45,26 +20,13 @@
   .home {
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    /* margin: 0px 32px; */
-    /* width: 704px; */
-    /* padding-top: 0px; */
-    /* height: 303px; */
   }
-  /* .content {
-    gap: 32px;
-  } */
 }
-/* @media screen and (max-width: 1280px) {
-  .content {
-    padding: 12px 64px;
-  }
-} */
+
 @media screen and (min-width: 1280px) {
   .home {
-    max-width: 1216px;
+    max-width: 1280px;
     max-height: 270px;
-    /* padding: 0px; */
-    /* padding: 10px 20px 20px 20px; */
   }
 }
 .title {
@@ -72,24 +34,6 @@
   font-size: 46px;
   font-weight: 700;
   line-height: 0.86;
-  /* margin-top: 14px; */
-}
-@media screen and (min-width: 768px) {
-  .title {
-    font-size: 80px;
-    line-height: 77px;
-    /* margin-top: 57px; */
-    /* margin-bottom: 32px; */
-  }
-}
-@media screen and (min-width: 1280px) {
-  .title {
-    font-size: 90px;
-    margin-top: 0px;
-    margin-bottom: 52px;
-    width: 760px;
-    height: 174px;
-  }
 }
 
 .title .light {
@@ -113,23 +57,25 @@
     display: flex;
     align-self: flex-end;
     width: 255px;
-    /* margin-bottom: 32px; */
   }
 }
 @media screen and (min-width: 1280px) {
   .title {
     font-size: 90px;
     width: 760px;
+    margin-bottom: 10px;
   }
   .content {
     display: flex;
     flex-direction: row;
     gap: 73px;
   }
+  .description {
+    margin-bottom: 0px;
+  }
 }
 
 .photo {
-  /* margin: 0px 20px 10px 20px; */
   display: flex;
   min-width: 280px;
   width: auto;
@@ -156,20 +102,18 @@
   .photo {
     background-image: url('../src/assets/imgs/tablet/home-tablet@1x.jpg');
     border-radius: 60px;
-    /* margin: 0px 32px 16px 32px; */
-    /* min-width: 704px;
-    height: 496px; */
+    height: 496px;
   }
 }
 @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .photo {
+    height: 496px;
     background-image: url('../src/assets/imgs/tablet/home-tablet@2x.jpg');
   }
 }
 @media screen and (min-width: 1280px) {
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@1x.jpg');
-    /* width: 1115px; */
     max-height: 384px;
   }
 }
@@ -177,7 +121,5 @@
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@2x.jpg');
     max-height: 384px;
-    /* adeded */
-    /* max-width: 1115px; */
   }
 }
