--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -7,7 +7,6 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 704px;
-    /* padding: 0 32px; */
   }
 }
 
@@ -15,7 +14,6 @@
   .container {
     max-width: 1280px;
     padding: 0px;
-    /* padding: 0 63px 0 64px; */
   }
 }
 
@@ -31,9 +29,7 @@
   object-fit: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100dvh;
-  /* width: 100vw;
-  height: 100dvh; */
+  height: 100vh;
 }
 
 @media only screen and (min-width: 320px) and (min-resolution: 192dpi) {
