--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -3,29 +3,26 @@
 }
 
 .container {
-  background-color: var(--main-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 30px;
-  min-width: 280px;
-  max-height: 712px;
+
   height: auto;
   margin: 0 auto;
+  background-color: var(--main-color);
 }
 @media screen and (min-width: 768px) {
   .container {
     border-radius: 60px;
     max-height: 878px;
-    margin: 0 32px 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
     height: auto;
-    max-height: 654px;
-    max-width: 1216px;
+    max-height: 620px;
   }
 }
 .commonContainer {
@@ -112,7 +109,7 @@
 .btnGo:hover,
 .btnGo:focus {
   background-color: var(--hover-light);
-  color: var(--dark-hover);
+  color: var(--white-color);
 }
 @media screen and (min-width: 768px) {
   .btnGo {
