--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,3 +1,11 @@
+/* .containerPage {
+  padding: 20px;
+}
+@media screen and (min-width: 1280px) {
+  .containerPage {
+    padding: 20px 64px;
+  }
+} */
 .title {
   font-size: 24px;
   font-weight: 700;
@@ -11,19 +19,21 @@
   grid-template-columns: 1fr;
   min-width: 335px;
   margin: 0 auto;
-  padding: 0 0 20px;
+  /* padding: 0px 20px; */
 }
 @media screen and (min-width: 768px) {
   .containerProfile {
-    max-width: 704px;
-    padding: 0 32px;
+    width: 704px;
+    /* padding: 0 32px; */
   }
 }
 
 @media screen and (min-width: 1280px) {
   .containerProfile {
     grid-template-columns: 435px 1.1fr;
-    max-width: 1216px;
-    padding: 0 32px;
+    margin: 0px;
+
+    max-width: 1280px;
+    /* padding: 0 32px; */
   }
 }
