--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -2,26 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 320px;
-  padding: 20px;
   gap: 10px;
 }
 @media screen and (max-width: 768px) {
   .pageRegister {
-    width: 704px;
     gap: 16px;
-    padding: 0px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pageRegister {
-    max-width: 1216px;
     flex-direction: row;
-    padding: 0px;
     gap: 32px;
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 32px; */
   }
 }
 
@@ -29,24 +20,22 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: var(--text-color);
   border-radius: 30px;
   padding: 27px 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 @media screen and (min-width: 768px) {
   .container {
-    height: 560px;
     border-radius: 60px;
-    padding: 30px 140px;
+    padding: 30px 100px 10px 100px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
     width: 592px;
-    height: 654px;
-    /* padding: 60px 84px 60px 84px; */
-    padding: 76px 83px;
+    min-height: 620px;
+    padding: 76px 83px 0px 83px;
   }
 }
 .titleContainer {
