--- a/src/components/MyNotices/MyNotices.module.css
+++ b/src/components/MyNotices/MyNotices.module.css
@@ -1,16 +1,18 @@
 .myNoticesWrap {
-  padding: 40px 0px;
+  padding: 10px;
 }
 
 @media screen and (min-width: 768px) {
   .myNoticesWrap {
-    padding: 32px 0;
+    min-width: 700px;
+    padding: 40px 40px 40px 20px;
+    /* padding: 32px; */
   }
 }
 
 @media screen and (min-width: 1280px) {
   .myNoticesWrap {
-    padding: 40px 32px;
+    padding: 40px;
   }
 }
 
@@ -21,11 +23,6 @@
   gap: 10px;
 }
 
-@media screen and (min-width: 768px) {
-  .myNoticesList {
-    max-width: 142px;
-  }
-}
 @media screen and (min-width: 1280px) {
   .myNoticesList {
     justify-content: flex-start;
@@ -41,7 +38,6 @@
   padding: 15px 20px;
   font-size: 14px;
   font-weight: 700;
-  /* min-width: 142px; */
   border: none;
   transition: color 0.3s ease, background-color 0.3s ease;
 }
@@ -54,15 +50,17 @@
   }
 }
 .navLinkFavorite {
+  color: var(--white-color);
+
   background-color: var(--main-color);
   border: transparent;
 }
 .navLinkFavorite:active,
 .navLinkFavorite:focus,
 .navLinkFavorite:hover {
-  color: var(--white-color);
-  background-color: var(--dark-hover);
-  border: 1px solid var(--light-border-color);
+  color: var(--main-color);
+  background-color: var(--main-light);
+  border: 1px solid var(--main-color);
 }
 .navLinkView {
   color: var(--black-color);
