--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 280px;
-  /* padding: 20px 10px; */
+  /* min-width: 280px; */
+  padding: 20px 10px;
   padding: 20px 40px;
   border-radius: 16px;
   background-color: var(--white-color);
@@ -13,15 +13,16 @@
 }
 @media screen and (min-width: 768px) {
   .item {
-    width: 342px;
+    /* min-width: 342px; */
     padding: 26px;
   }
 }
-/* @media screen and (min-width: 1280px) {
+
+@media screen and (min-width: 1280px) {
   .item {
     max-width: 363px;
   }
-} */
+}
 .item:hover {
   transform: translateY(-10px);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.15);
