--- a/src/components/UserBlock/UserBlock.module.css
+++ b/src/components/UserBlock/UserBlock.module.css
@@ -1,6 +1,5 @@
 .userBlockWrapper {
   margin-bottom: 40px;
-  border: 2px solid red;
   background-color: var(--white-color);
 }
 
@@ -82,21 +81,23 @@
   gap: 14px;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .userInfoInputsWrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 14px;
   }
 }
 
-/* @media screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .userInfoInputsWrapper {
     grid-template-columns: 1fr;
-    gap: 14px;
   }
 } */
 
 .userInfoFormInput {
   font-weight: 500;
+  width: 100%;
   font-size: 14px;
   line-height: 1.2;
   color: var(--black-color);
@@ -104,7 +105,6 @@
   border-radius: 30px;
   border: 1px solid var(--border-color);
   background-color: transparent;
-  /* margin-bottom: 10px; */
 }
 .userInfoFormInput:not(:last-child) {
   margin-bottom: 10px;
@@ -113,8 +113,7 @@
 @media screen and (min-width: 768px) {
   .userInfoFormInput {
     font-size: 16px;
-    line-height: 1.25;
-    padding: 16px;
+    line-height: 1.1;
     margin-bottom: 0;
   }
   .userInfoFormInput:not(:last-child) {
