--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,30 +1,30 @@
-/* .containerPage {
+.containerPage {
+  margin: 0 auto;
   padding: 20px;
+}
+@media screen and (min-width: 768px) {
+  .containerPage {
+    max-width: 768px;
+    padding: 32px;
+  }
 }
 @media screen and (min-width: 1280px) {
   .containerPage {
-    padding: 20px 64px;
+    padding: 40px;
+    max-width: 1280px;
   }
-} */
-.title {
-  font-size: 24px;
-  font-weight: 700;
-  margin-left: 60px;
-  margin-bottom: 15px;
-  line-height: 32px;
-  color: var(--black-color);
 }
+
 .containerProfile {
   display: grid;
   grid-template-columns: 1fr;
-  min-width: 335px;
-  margin: 0 auto;
-  /* padding: 0px 20px; */
+  /* min-width: 280px; */
+  /* padding: 20px; */
+  /* margin: 0 auto; */
 }
 @media screen and (min-width: 768px) {
   .containerProfile {
     width: 704px;
-    /* padding: 0 32px; */
   }
 }
 
@@ -32,8 +32,5 @@
   .containerProfile {
     grid-template-columns: 435px 1.1fr;
     margin: 0px;
-
-    max-width: 1280px;
-    /* padding: 0 32px; */
   }
 }
