--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -17,7 +17,8 @@
     display: flex;
     gap: 8px;
     align-items: center;
-    margin-right: 100px;
+    justify-content: center;
+    margin-right: 200px;
   }
 }
 
