--- a/src/components/LogoChange/LogoChange.module.css
+++ b/src/components/LogoChange/LogoChange.module.css
@@ -85,11 +85,10 @@
     width: 36px;
     height: 36px;
     display: flex;
-    margin-left: 10px;
+    margin-right: 10px;
     align-self: center;
     justify-content: center;
     align-items: center;
-
     border-radius: 50%;
     background-color: var(--main-light);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
