--- a/src/pages/OurFriendsPage/OurFriendsPage.module.css
+++ b/src/pages/OurFriendsPage/OurFriendsPage.module.css
@@ -2,35 +2,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-bottom: 80px;
-  /* padding-top: 34px; */
 }
-/* @media screen and (min-width: 768px) {
-  .containerPageFriends {
-    padding-top: 53px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .containerPageFriends {
-    padding-top: 64px;
-  }
-} */
+
 .titleFriend {
   font-size: 28px;
   font-weight: 700;
   line-height: 0.94;
-  margin-bottom: 38px;
+  margin-top: 20px;
 }
 @media screen and (min-width: 768px) {
   .titleFriend {
-    margin-left: 50px;
+    margin-top: 40px;
     font-size: 48px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .titleFriend {
-    margin-left: 100px;
+    margin-top: 60px;
     font-size: 54px;
   }
 }
