--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -6,6 +6,8 @@
   .authNav {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
   }
 }
@@ -20,12 +22,12 @@
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
-  width: 100%;
   border: none;
   transition: color 0.3s ease, background-color 0.3s ease;
 }
 
 .loginButton {
+  width: 119px;
   background-color: var(--main-color);
   color: var(--white-color);
   border: 1px solid #dad4d4;
@@ -37,6 +39,7 @@
 }
 
 .registerButton {
+  width: 149px;
   background-color: var(--hover-light);
   color: var(--main-color);
 }
