--- a/src/components/ContainerPage/ContainerPage.module.css
+++ b/src/components/ContainerPage/ContainerPage.module.css
@@ -1,4 +1,5 @@
 .container {
+  display: block;
   max-width: 335px;
   margin: 0 auto;
   padding: 0 20px;
@@ -6,7 +7,7 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 704px;
+    max-width: 768px;
     padding: 0 32px;
   }
 }
@@ -14,5 +15,6 @@
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
+    padding: 0 64px;
   }
 }
