--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -58,7 +58,7 @@ input.invalid {
   right: 10px;
   cursor: pointer;
   font-size: 18px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   border: none;
   background: none;
 }
