--- a/src/components/MyNotices/MyNotices.module.css
+++ b/src/components/MyNotices/MyNotices.module.css
@@ -1,30 +1,29 @@
 .myNoticesWrap {
-  padding: 10px;
+  padding: 5px;
 }
 
 @media screen and (min-width: 768px) {
   .myNoticesWrap {
-    min-width: 700px;
     padding: 40px 40px 40px 20px;
-    /* padding: 32px; */
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .myNoticesWrap {
-    padding: 40px;
+    padding: 10px 5px 10px 10px;
   }
 }
 
-.myNoticesList {
+.wrapperLink {
   display: flex;
-  min-width: 280px;
   justify-content: center;
   gap: 10px;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 1280px) {
-  .myNoticesList {
+  .wrapperLink {
+    margin-top: 0px;
     justify-content: flex-start;
     gap: 8px;
   }
@@ -35,15 +34,15 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  padding: 15px 20px;
-  font-size: 14px;
+  padding: 15px 10px;
+  font-size: 12px;
   font-weight: 700;
   border: none;
   transition: color 0.3s ease, background-color 0.3s ease;
 }
 @media screen and (min-width: 768px) {
   .navLink {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.25;
     padding: 14px;
     min-width: 114px;
@@ -51,7 +50,6 @@
 }
 .navLinkFavorite {
   color: var(--white-color);
-
   background-color: var(--main-color);
   border: transparent;
 }
