--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -18,7 +18,7 @@
     gap: 8px;
     align-items: center;
     justify-content: center;
-    margin-right: 200px;
+    margin-right: 150px;
   }
 }
 
@@ -87,7 +87,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .iconsWrap {
