--- a/src/components/NewsList/NewsList.module.css
+++ b/src/components/NewsList/NewsList.module.css
@@ -1,24 +1,26 @@
-.list {
+.listNews {
   display: flex;
   flex-direction: column;
+  min-width: 280px;
   gap: 24px;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
-  .list {
+  .listNews {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 32px;
     column-gap: 24px;
+    padding: 30px 0px 20px 0px;
   }
 }
-@media screen and (min-width: 768px) {
-  .list {
+@media screen and (min-width: 1280px) {
+  .listNews {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 40px;
-    column-gap: 35px;
+    column-gap: 24px;
   }
 }
