--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -1,34 +1,15 @@
-/* .list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-  margin-top: 40px;
-}
-
-@media screen and (min-width: 580px) {
-  .list {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-}
-
-@media screen and (min-width: 1110px) {
-  .list {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 32px;
-    row-gap: 40px;
-  }
-} */
 .list {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
-  margin-top: 40px;
+  margin: 0 auto;
+  padding-top: 40px;
 }
 
 @media screen and (min-width: 580px) {
   .list {
     grid-template-columns: repeat(2, 1fr);
+    padding: 40px 5px 5px 5px;
     gap: 20px;
   }
 }
@@ -36,23 +17,22 @@
 @media screen and (min-width: 1110px) {
   .list {
     grid-template-columns: repeat(3, 1fr);
-    gap: 32px;
+    /* gap: 32px; */
     row-gap: 40px;
   }
 }
-/* style favorite and view_______________ */
+
+/* style favorite and viewed_______________ */
 .profileList,
 .viewedList {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
-  margin-top: 40px;
 }
 @media screen and (min-width: 580px) {
+  .viewedList,
   .profileList {
     grid-template-columns: repeat(2, 1fr);
-  }
-  .viewedList {
-    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
 }
