--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,8 +1,20 @@
 .pagination {
+  margin: 0 auto;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 60px 0 0;
+  margin: 60px 0px;
+}
+@media screen and (min-width: 768px) {
+  .pagination {
+    max-width: 680px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .pagination {
+    max-width: 1115px;
+  }
 }
 
 .flipWrapper {
@@ -20,21 +32,23 @@
 .pagesWrapper {
   display: flex;
   gap: 10px;
-  margin: 0 11px;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
 @media screen and (min-width: 768px) {
   .pagesWrapper {
-    margin: 0 24px;
+    padding: 0px 20px 30px 20px;
   }
 }
+
 .button,
 .buttonFlip,
 .ellipsis {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
   border: 1px solid rgba(38, 38, 38, 0.05);
   border-radius: 50%;
   background: none;
@@ -56,8 +70,8 @@
   .button,
   .buttonFlip,
   .ellipsis {
-    width: 44px;
-    height: 44px;
+    width: 45px;
+    height: 45px;
     font-size: 18px;
   }
 }
