--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,7 +1,8 @@
 .userCardWrapper {
   min-width: 280px;
-  padding: 20px 20px 40px 20px;
-  border-radius: 30px;
+  padding: 10px;
+  margin: 0 auto;
+  border-radius: 15px;
   background-color: var(--text-color);
   background-color: var(--white-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -9,8 +10,10 @@
 
 @media screen and (min-width: 768px) {
   .userCardWrapper {
+    border-radius: 30px;
     position: relative;
-    padding: 40px;
+    width: 600px;
+    padding: 60px 90px;
     border-radius: 60px;
   }
 }
@@ -18,7 +21,8 @@
 @media screen and (min-width: 1280px) {
   .userCardWrapper {
     max-height: 750px;
-    max-width: 520px;
+    max-width: 435px;
+    padding: 40px;
   }
 }
 
