--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,29 +1,21 @@
-.container {
-  padding: 0 20px;
-}
-@media screen and (min-width: 768px) {
-  .container {
-    padding: 0 32px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container {
-    padding: 0 64px;
-  }
-}
-
 .noFound {
   margin: 0 auto;
   font-size: 16px;
   font-weight: 700;
   color: var(--red-color);
 }
+.searchContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
 
 @media screen and (min-width: 768px) {
   .searchContainer {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 44px;
+    margin-top: 20px;
+    margin-top: 40px;
   }
 }
 
