--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -1,16 +1,16 @@
 .container {
-  margin: 26px 0 80px;
+  display: block;
+  margin: 0 auto;
   padding: 0 20px;
 }
 @media screen and (min-width: 768px) {
   .container {
-    margin-top: 32px;
     padding: 0 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
-    padding: 0 64px;
+    max-width: 1280px;
   }
 }
 
