--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -1,3 +1,22 @@
+.wrapperRegister {
+  display: block;
+  max-width: 335px;
+  margin: 0 auto;
+  padding: 20px;
+}
+@media screen and (min-width: 768px) {
+  .wrapperRegister {
+    max-width: 768px;
+    padding: 0 32px 20px 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .wrapperRegister {
+    max-width: 1280px;
+    padding: 0px 34px 20px 34px;
+  }
+}
+
 .pageRegister {
   display: flex;
   flex-direction: column;
@@ -28,14 +47,14 @@
 @media screen and (min-width: 768px) {
   .container {
     border-radius: 60px;
-    padding: 30px 100px 10px 100px;
+    padding: 40px 90px 10px 90px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
     width: 592px;
     min-height: 620px;
-    padding: 70px 80px 0px 80px;
+    padding: 10px 80px 0px 80px;
   }
 }
 .titleContainer {
