--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../src/assets/imgs/mobile/main-mob@1x.jpg);
+  background-image: url(../../assets/imgs/mobile/main-mob@1x.jpg);
   background-size: cover;
   background-position: top center;
   background-position: center;
@@ -34,31 +34,31 @@
 
 @media only screen and (min-width: 320px) and (min-resolution: 192dpi) {
   .mainContainer {
-    background-image: url(../src/assets/imgs/mobile/main-mob@2x.jpg);
+    background-image: url(../../assets/imgs/mobile/main-mob@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .mainContainer {
-    background-image: url(../src/assets/imgs/tablet/main-tablet@1x.jpg);
+    background-image: url(../../assets/imgs/tablet/main-tablet@1x.jpg);
   }
 }
 
 @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .mainContainer {
-    background-image: url(../src/assets/imgs/tablet/main-tablet@2x.jpg);
+    background-image: url(../../assets/imgs/tablet/main-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1024px) and (min-width: 1280px) {
   .mainContainer {
-    background-image: url(../src/assets/imgs/desktop/main-desk@1x.jpg);
+    background-image: url(../../assets/imgs/desktop/main-desk@1x.jpg);
   }
 }
 
 @media screen and (min-width: 1024px) and (min-width: 1280px) and (min-resolution: 192dpi) {
   .mainContainer {
-    background-image: url(../src/assets/imgs/desktop/main-desk@2x.jpg);
+    background-image: url(../../assets/imgs/desktop/main-desk@2x.jpg);
   }
 }
 .containerLogo {
