--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -92,6 +92,7 @@ input.invalid {
   position: absolute;
   right: 50px;
   font-size: 18px;
+  fill: #ef2447;
   stroke: #ef2447;
 }
 @media screen and(min-width:768px) {
