--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,15 +1,42 @@
-.noFound {
+/* .noFound {
   margin: 0 auto;
   font-size: 16px;
   font-weight: 700;
-  color: var(--red-color);
+  color: var(--dark-hover);
+} */
+
+.noFound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  text-align: center;
+  color: var(--dark-hover);
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5;
+  padding: 0 1rem 20px;
+}
+
+@media (min-width: 768px) {
+  .noFound {
+    margin-top: 20px;
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .noFound {
+    margin-top: 40px;
+    font-size: 2rem;
+  }
 }
 .searchContainer {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
 }
-
 @media screen and (min-width: 768px) {
   .searchContainer {
     flex-direction: row;
