--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -21,29 +21,57 @@
     margin-bottom: 44px;
   }
 }
-.errorContainer {
+.loadText {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
   text-align: center;
-  color: var(--female-color);
+  color: var(--dark-hover);
   font-size: 1rem;
   font-weight: bold;
   line-height: 1.5;
   padding: 0 1rem;
 }
 @media (min-width: 768px) {
+  .loadText {
+    margin-top: 20px;
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .loadText {
+    margin-top: 40px;
+    font-size: 2rem;
+  }
+}
+
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  text-align: center;
+  color: var(--dark-hover);
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5;
+  padding: 0 1rem 20px;
+}
+
+@media (min-width: 768px) {
   .errorContainer {
-    margin-top: 100px;
+    margin-top: 20px;
     font-size: 1.2rem;
   }
 }
 
 @media (min-width: 1280px) {
   .errorContainer {
-    margin-top: 120px;
+    margin-top: 40px;
     font-size: 2rem;
   }
 }
